# betterbuildhatmotors

./: .gitignore  README.md  Readme.md  pyproject.toml
examples/: long_duration_test.py  old_motor_control.py  quick_test.py
src/betterbuildhatmotors/: __init__.py  control.py  motor.py  plotting.py
tests/: test_control.py
